[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "justhope"
version = "0.0.2"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
justhope = "justhope.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["justhope"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["justhope"]
extend-exclude = ["docs", "env", "__pycache__", "*.egg", "htmlcov"]
respect-gitignore = true
unsafe-fixes = false

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = [
  "B",     # flake8-bugbear
  "C90",   # mccabe
  "C4",    # flake8-comprehensions
  "DTZ",   # flake8-datetimez https://docs.astral.sh/ruff/rules/#flake8-datetimez-dtz
  "EM",    # flake8-errmsg
  "UP",    # pyupgrade
  "FA",    # flake8-future-annotations
  "LOG",   # flake8-logging
  "PTH",   # flake8-use-pathlib
  "ASYNC", #flake8-async
  "G",     # flake8-logging-format
  "E",     # pycodestyle errors
  "F",     # pyflakes
  "I",     # isort
  "S",     # flake8-bandit
  "W",     # pycodestyle warnings
  "N",     # pep8-naming
  "RUF",   # ruff checks
  "TD",    # flake8-todo
]
ignore = [
  # "E402",   # module level import not at top of file
  "E722", # do not use bare except
  "ERA",  # do not autoremove commented out code
  "N818", # error-suffix-on-exception-name
  "UP040", # type instead of TypeAlias PEP 695"
  "TD001", # Invalid TODO tag
  "TD002", # Author name in TODO
  "TD003", # Found TODO in code
  "TD004", # Missing colon in TODO
  "UP017", # Use datetime.UTC alias (not available for 3.10)
  "RUF001", # Comment contains russian characters
  "RUF002", # Comment contains russian characters
  "RUF003", # Comment contains russian characters
  "G004", # Logging statement uses string formatting
]
fixable = ["ALL"]
unfixable = [
  "F401", # Unused import
  "F841", # Unused variable
  "UP035", # Deprecated import
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = []

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "single"
inline-quotes = "single"
multiline-quotes = "single"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.*" = ["S101", "DTZ", "EM101", "RUF012", "E712"]

[tool.ruff.lint.isort]
known-first-party = ["justhope"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
check_untyped_defs = true
python_version = "3.12"
ignore_missing_imports = false
color_output = true
warn_redundant_casts = true
warn_unused_configs = true
exclude = ["venv/", ".venv/", "tests/*"]
strict = true
disallow_any_generics = false
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
implicit_reexport = false
show_error_codes = true
warn_return_any = true
warn_unreachable = true
warn_unused_ignores = true
